# formasur-01

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fake_report_min.xlsx  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  logging.py  main.py  models.py  queue.py
app/api/: courses.py  notifications.py  students.py  uploads.py  workflows.py
app/integrations/: sql_bridge.py
app/jobs/: __init__.py  moodle_sync.py  scheduler.py
app/modules/: __init__.py
app/notify/: __init__.py  dispatcher.py  repository.py  worker.py
app/rules/: __init__.py  engine.py
app/services/: __init__.py  database_bridge.py  (+2 more)
docker/: README.md
docs/: README.md  beta_operational_manual.md  current_state_and_next_steps.md  extensibility-guide.md  operations-runbook.md  overview.md  prevengos-integration.md  system-architecture.md  testing-guide.md
frontend/: .gitignore  README.md  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
migrations/: README.md
tests/: test_cli_adapter.py  test_course_sync_service.py  test_courses_api.py  test_dispatcher.py  test_email_adapter.py  test_models.py  test_moodle_connectors.py  test_moodle_jobs.py  test_notifications_api.py  test_prevengos_integration.py  test_rules_engine.py  test_scheduler.py  test_sql_bridge.py  test_students_api.py  test_uploads.py  test_whatsapp_adapter.py  test_workflow_runner.py  test_workflows_api.py
workflows/: README.md
(+50 files in other folders)
